Fix about section alignment

--- a/wwfypc-react/src/Home/About/style/About.scss
+++ b/wwfypc-react/src/Home/About/style/About.scss
@@ -7,6 +7,8 @@
 
 .About {
   min-height: 100%;
+  display: flex;
+  align-items: center;
 
   header {
     height: 100%;
